--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/HappyOneWeb.loader.js";
       var config = {
-        dataUrl: buildUrl + "/HappyOneWeb.data.br",
-        frameworkUrl: buildUrl + "/HappyOneWeb.framework.js.br",
-        codeUrl: buildUrl + "/HappyOneWeb.wasm.br",
+        dataUrl: buildUrl + "/HappyOneWeb.data",
+        frameworkUrl: buildUrl + "/HappyOneWeb.framework.js",
+        codeUrl: buildUrl + "/HappyOneWeb.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Stalker",
         productName: "HappyOne",
