--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/HappyOneWeb.loader.js";
       var config = {
-        dataUrl: buildUrl + "/cc32bcfb6ea2fe773ff0cf3f786010e8.data",
-        frameworkUrl: buildUrl + "/43b470cfa6b0536412f924840a96b855.js",
-        codeUrl: buildUrl + "/1033c614b5128a6a723920eeab5aff05.wasm",
+        dataUrl: buildUrl + "/HappyOneWeb.data",
+        frameworkUrl: buildUrl + "/HappyOneWeb.framework.js",
+        codeUrl: buildUrl + "/HappyOneWeb.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Stalker",
         productName: "HappyOne",
